--- a/src/app/restaurant-detail/menu/menu.component.html
+++ b/src/app/restaurant-detail/menu/menu.component.html
@@ -2,9 +2,10 @@
 <div class="col-md-9 col-xs-12">
   <mt-menu-item 
     *ngFor="let item of menu | async" 
-    [item]="item" (add)="addMenuItem($event)"></mt-menu-item>
+    [item]="item" (add)="shoppingCart.addItem($event)"></mt-menu-item>
 </div>
 <div class="col-md-3 col-xs-12">
-  <mt-shopping-cart></mt-shopping-cart>
+  <!--Dando um ID para o componente em tela-->
+  <mt-shopping-cart #shoppingCart></mt-shopping-cart>
 </div>
 <!-- FIM DO MENU -->
