--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -25,40 +25,39 @@
 
             <!--Endereço-->
             <div class="col-sm-6 col-xs-12">
-              <div class="form-group" 
-                [class.has-error]="!iptAddress.valid && (iptAddress.touched)"
-                [class.has-success]="iptAddress.valid && (iptAddress.dirty || iptAddress.touched)">
-                <label class="control-label sr-only" for="inputSuccess"><i class="fa fa-check"></i> Endereço</label>
-                <input type="text" class="form-control" id="inputSuccess"
-                  placeholder="Endereço" required minlength="5" 
-                  autocomplete="false" name="address" ngModel 
-                  #iptAddress="ngModel">
-                <span *ngIf="iptAddress.valid && (iptAddress.dirty || iptAddress.touched)" class="help-block"><i class="fa fa-check"></i> Ok</span>
-                <span *ngIf="!iptAddress.valid && (iptAddress.touched)" class="help-block"><i class="fa fa-remove"></i>Endereço obrigatório com no mínimo 5 caracteres.</span>
-              </div>
+              <mt-input-container 
+                label="Endereço"
+                errorMessage="Obrigatório e mínimo 5 caracteres">
+                <input type="text" 
+                  placeholder="Endereço"
+                  class="form-control" 
+                  required minlength="5" 
+                  autocomplete="false" name="address" ngModel>
+              </mt-input-container>
             </div>
 
             <!--Número-->
             <div class="col-sm-2 col-xs-6">
-              <div class="form-group"
-              [class.has-error]="!iptNumero.valid && (iptNumero.touched)"
-              [class.has-success]="iptNumero.valid && (iptNumero.dirty || iptNumero.touched)">
-                <label class="control-label sr-only" for="inputSuccess"><i class="fa fa-check"></i> Número</label>
-                <input type="text" class="form-control" id="inputSuccess" 
-                  placeholder="Número" required name="numero" ngModel
-                  #iptNumero="ngModel">
-                  <span *ngIf="iptNumero.valid && (iptNumero.dirty || iptNumero.touched)" class="help-block"><i class="fa fa-check"></i> Ok</span>
-                  <span *ngIf="!iptNumero.valid && (iptNumero.touched)" class="help-block"><i class="fa fa-remove"></i>Número válido obrigatório.</span>
-              </div>
+              <mt-input-container 
+                label="Número"
+                errorMessage="Obrigatório">
+                <input type="text"
+                  placeholder="Número" 
+                  class="form-control" 
+                  required 
+                  autocomplete="false" name="number" ngModel>
+              </mt-input-container>
             </div>
 
             <!--Complemento-->
             <div class="col-sm-4 col-xs-6">
-              <div class="form-group">
-                <label class="control-label sr-only" for="inputSuccess"><i class="fa fa-check"></i> Complemento</label>
-                <input type="text" class="form-control" id="inputSuccess" placeholder="Complemento" name="optional" ngModel>
-              </div>
-
+              <mt-input-container 
+                label="Complemento">
+                <input type="text" 
+                  placeholder="Complemento"
+                  class="form-control" 
+                  autocomplete="false" name="optional" ngModel>
+              </mt-input-container>
             </div>
             <!-- /.col -->
           </div>
