--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -37,20 +37,21 @@
             </div>
 
             <!--Número-->
-            <div class="col-sm-2 col-xs-6">
+            <div class="col-sm-3 col-xs-6">
               <mt-input-container 
                 label="Número"
-                errorMessage="Obrigatório">
+                errorMessage="Obrigatório e somente números">
                 <input type="text"
                   placeholder="Número" 
                   class="form-control" 
                   required 
+                  pattern="^[0-9]*$"
                   autocomplete="false" name="number" ngModel>
               </mt-input-container>
             </div>
 
             <!--Complemento-->
-            <div class="col-sm-4 col-xs-6">
+            <div class="col-sm-3 col-xs-6">
               <mt-input-container 
                 label="Complemento">
                 <input type="text" 
