--- a/src/app/restaurant-detail/shopping-cart/shopping-cart.component.html
+++ b/src/app/restaurant-detail/shopping-cart/shopping-cart.component.html
@@ -14,7 +14,7 @@
     <div class="table-responsive">
         <table class="table">
           <tbody>
-          <tr *ngFor="let item of items()">
+          <tr *ngFor="let item of items()" [@row]="rowState">
             <th style="width:60%">{{item.menuItem.name}} * {{item.quantity}}</th>
             <td class="text-right">{{item.value() | currency: 'BRL': true}}</td>
             <td class="text-right">
