--- a/src/app/restaurants/restaurants.component.html
+++ b/src/app/restaurants/restaurants.component.html
@@ -2,9 +2,21 @@
 <section class="content-header">
   <h1>
     Todos os Restaurantes
+    <a (click)="toggleSearch()" class="search-link">
+      <span *ngIf="iptSearch.value"><small>{{iptSearch.value}}</small></span>
+      <i class="fa fa-search pull-right"></i>
+    </a>
   </h1>
+  <div class="row">
+    <div class="col-xs-12 search-bar" [@toggleSearch]="searchBarState">
+      <form [formGroup]="searchForm">
+        <div class="form-group">
+          <input [formControl]="searchControl" #iptSearch type="text" class="form-control" placeholder="O que você está procurando?">
+        </div>
+      </form>
+    </div>
+  </div>
 </section>
-
 
 <section class="content">
 
