--- a/src/app/restaurants/restaurants.component.html
+++ b/src/app/restaurants/restaurants.component.html
@@ -24,7 +24,11 @@
     <div *ngFor="let restaurant of restaurants" class="col-sm-6 col-xs-12">
       <mt-restaurant [restaurant]="restaurant"></mt-restaurant>
     </div>
-
+    <div class="col-xs-12" *ngIf="restaurants?.length == 0">
+      <p class="lead text-center">
+        Não foram encontrados resultados.
+      </p>
+    </div>
 
   </div>
 
