--- a/src/app/restaurant-detail/menu-item/menu-item.component.html
+++ b/src/app/restaurant-detail/menu-item/menu-item.component.html
@@ -4,7 +4,7 @@
   <div class="menu-item-info-box-content">
     <span class="menu-item-info-box-text">{{item.name}}</span>
     <span class="menu-item-info-box-detail">{{item.description}}</span>
-    <span class="menu-item-info-box-price">{{item.price | currency: 'BRL': true}}</span>
+    <span class="menu-item-info-box-price">{{item.price | currency: 'BRL': 'symbol'}}</span>
     <a (click)="emitAddEvent()" class=""><i class="fa fa-plus-circle"></i> Adicionar</a>
   </div>
 </div>
