--- a/src/app/restaurant-detail/shopping-cart/shopping-cart.component.html
+++ b/src/app/restaurant-detail/shopping-cart/shopping-cart.component.html
@@ -16,7 +16,7 @@
           <tbody>
           <tr *ngFor="let item of items()" [@row]="rowState">
             <th style="width:60%">{{item.menuItem.name}} * {{item.quantity}}</th>
-            <td class="text-right">{{item.value() | currency: 'BRL': true}}</td>
+            <td class="text-right">{{item.value() | currency: 'BRL': 'symbol'}}</td>
             <td class="text-right">
               <a (click)="removeItem(item)" class="btn btn-sm-danger">
                 <i class="fa fa-remove"></i>
@@ -27,7 +27,7 @@
           <tr>
             <th>Total:</th>
 
-            <td class="text-right">{{total() | currency: 'BRL': true}}</td>
+            <td class="text-right">{{total() | currency: 'BRL': 'symbol'}}</td>
           </tr>
         </tbody></table>
       </div>
